[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emod-PACKAGE_TYPE"
dynamic = ["version"]
description = "PyPI distribution of EMOD for the PACKAGE_TYPE sim type"
license = "MIT"
authors = [
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
docs = [
    "sphinxext.remoteliteralinclude~=0.4",
    "sphinx~=6.2",
    "pydata-sphinx-theme",
    "plantweb~=1.2",
    "sphinxcontrib-programoutput~=0.17",
    "myst-parser~=2.0",
    "pygithub~=1.57",
]
tests = [
]

[project.urls]
Documentation = "https://emod.idmod.org/EMOD/"
Repository = "https://github.com/EMOD-Hub/EMOD"
Issues = "https://github.com/EMOD-Hub/issues-and-discussions/issues"

[tool.setuptools.package-data]
"*" = ["*.zip"]

[tool.setuptools.dynamic]
version = {file = ["src/version"]}
