[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emod-PACKAGE_TYPE"
dynamic = ["version"]
description = "PyPI distribution of EMOD for the PACKAGE_TYPE sim type"
readme = "README.md"
requires-python = ">=3.10"
authors = [
]
keywords = ["modeling", "IDM"]
dependencies = [
]
license = "MIT"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
    "mkdocs-table-reader-plugin",
]
lint = [
]
test = [
]

[project.urls]
Repository = "https://github.com/EMOD-Hub/EMOD"
Documentation = "https://emod.idmod.org/EMOD/"
Issues = "https://github.com/EMOD-Hub/issues-and-discussions/issues"

[tool.setuptools.package-data]
"*" = ["*.zip"]

[tool.setuptools.dynamic]
version = {file = ["src/version"]}
